// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a StarRatingWrapper component should render the component correctly to match the centralised snapshot 1`] = `
<DocumentFragment>
  .c0 {
  min-height: 1.125rem;
  display: inline-block;
}

@media (min-width:768px) {
  .c0 {
    display: inline-block;
    vertical-align: top;
    margin-top: 0.05rem;
  }
}

<a
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a StarRatingWrapper component should render the component correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  min-height: 1.125rem;
  display: block;
}

@media (min-width:768px) {
  .c0 {
    display: inline-block;
    vertical-align: top;
    margin-top: 0.05rem;
  }
}

<a
    class="c0"
  />
</DocumentFragment>
`;
